tests/NormalTests/paczka1/fuzzy1/38048623.err
Error in line 2: A740 A115 95,8
Error in line 18: FXZn A543 96,0
Error in line 19: NPl5oihHgMR A115 35,1
Error in line 21: FXZn A840 14,5
Error in line 26: FXZn A543 4,3
Error in line 23: NPl5oihHgMR A740 85,9
Error in line 39: pJ3 A115 70,0
